# aural_reactor

./: .gitignore  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: analyze.py  arrange.py  effects.py  media.py  projects.py  render.py  routing.py
backend/app/audio/: beats.py  drop.py  features.py  onsets.py  pipeline.py  sections.py  signals.py  stems.py
backend/app/media/: ingest.py
backend/app/project/: models.py  store.py
backend/app/render/: gl.py  pipeline.py
backend/app/routing/: auto.py  matrix.py  presets.py  transforms.py
backend/app/video/: arranger.py  edl.py  effects.py  probe.py
backend/app/ws/: project_ws.py
backend/tests/: test_arranger.py  test_audio_pipeline.py  test_clip_strip_api.py  test_ingest.py  test_render_aspect.py  test_render_e2e.py  test_render_modes.py  test_render_orientation.py  test_routing.py  test_routing_auto.py
docs/: ARCHITECTURE.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  shaders
frontend/src/api/: client.ts
frontend/src/components/: MediaBin.tsx  ProjectsPage.tsx  ResolutionPicker.tsx  Topbar.tsx
frontend/src/components/ModulationMatrix/: EffectChainCards.tsx  EffectTuner.tsx  ModulationMatrix.tsx  PatchCard.tsx  SectionTabs.tsx  StyleCards.tsx
frontend/src/components/Preview/: PreviewCanvas.tsx  PreviewStatusOverlay.tsx
frontend/src/components/Timeline/: ClipCard.tsx  ClipStrip.tsx  EventLane.tsx  PlayheadCursor.tsx  SignalLane.tsx  (+1 more)
frontend/src/hooks/: useClipThumbnail.ts  useEdlMutations.ts  useProjectSocket.ts  useSignal.ts  useThumbnailCache.ts
frontend/src/lib/: clipColor.ts  snap.ts
frontend/src/preview/: PreviewEngine.ts  gl.ts  modulation.ts
frontend/src/store/: playback.ts  progress.ts
scripts/: dev.sh
shared/shaders/: bloom.frag  common.glsl  contrast_pump.frag  feedback.frag  glitch.frag  grain.frag  kaleidoscope.frag  light_leak.frag  passthrough.frag  pixelate.frag  rgb_split.frag  shake.frag  source_fit.frag  vignette.frag  zoom.frag
(+2 files in other folders)
